Fix: span overflow

--- a/src/modules/dashboard/components/CreateColonyWizard/StepColonyName.css
+++ b/src/modules/dashboard/components/CreateColonyWizard/StepColonyName.css
@@ -41,4 +41,8 @@
   .main {
     padding-bottom: 40px;
   }
+
+  .main h3 span {
+    overflow-wrap: anywhere;
+  }
 }
