--- a/src/modules/dashboard/components/CreateColonyWizard/StepConfirmAllInput.css
+++ b/src/modules/dashboard/components/CreateColonyWizard/StepConfirmAllInput.css
@@ -49,4 +49,8 @@
   .finalContainer {
     width: 100%;
   }
+
+  .cardRow span {
+    max-width: 208px;
+  }
 }
